# unisinos-computer-graphics

./: .gitignore  CMakeLists.txt  README.md  glad.c
20250517_atividadeVivencial/: README.md  multiple_objects.cpp
20250517_atividadeVivencial/models/suzanne/: suzanne.mtl
20250517_atividadeVivencial/shaders/: fragment_shader.glsl
20250531_atividadeVivencial/: README.md  RESULT.md  main.cpp  objects_lighting_vivencial.cpp
20250531_atividadeVivencial/shaders/: fragment_shader.glsl  fragment_shader_v2.glsl  fragment_shader_v2_BKP.glsl  vertex_background.glsl  vertex_shader.glsl  vertex_shader_v2.glsl
dependencies/include/ParametricCurves/: Bezier.cpp  Bezier.h  (+6 more)
finalProject/: README.md  basket.cpp  basketball_config.json
finalProject/shaders/: fragment_background.glsl  fragment_curves.glsl  fragment_number.glsl  fragment_shader.glsl  vertex_background.glsl  vertex_number.glsl  vertex_shader_simple.glsl
module1/: RESULT.md  app  main.cpp
module2/: RESULT.md  app  cubes.cpp
module2_objects/: objects_reader_model.cpp
module2_objects/shaders/: fragment_shader.glsl
module3/: RESULT.md  objects_texture.cpp
module4/: RESULT.md  objects_lighting.cpp
module4/shaders/: fragment_shader.glsl  vertex_shader.bak
module5/: first_person_camera.cpp
module5/shaders/: fragment_background.glsl  fragment_shader.glsl  vertex_shader.glsl
module6/: Origem.cpp  RESULT.md  parametric_curves.cpp
module6/shaders/: fragment_background.glsl  vertex_background.glsl  vertex_curves.glsl
tests/: multiple_objects_lighting.cpp  multiple_objects_lighting_with_texture.cpp
(+13 files in other folders)
